package NYT.NFileClient.NProto;

////////////////////////////////////////////////////////////////////////////////

message TBlockInfo
{
    required int32 size = 1;
}

message TBlocksExt
{
    repeated TBlockInfo blocks = 1;
}

////////////////////////////////////////////////////////////////////////////////
